new db with train data

--- a/Housing_Data_Clean.ipynb
+++ b/Housing_Data_Clean.ipynb
@@ -13,8 +13,8 @@
     "import warnings\n",
     "\n",
     "# Import database packages\n",
-    "from sqlalchemy import create_engine, func, select, update, delete, text\n",
-    "from sqlalchemy import Column, Integer, String, Float, Boolean, ForeignKey\n",
+    "from sqlalchemy import create_engine, select\n",
+    "from sqlalchemy import Column, Integer, String, Float\n",
     "from sqlalchemy.orm import Session, declarative_base\n",
     "\n"
    ]
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "#Open data file into csv\n",
-    "file_path = Path(\"./data/dataset_zillow_052924.csv\")\n",
+    "file_path = Path(\"./data/zillow_sold_prices_053024.csv\")\n",
     "\n",
     "housing_data = pd.read_csv(file_path)\n",
     "housing_data.head()"
@@ -48,11 +48,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6efcc151-4bd2-4f4a-80b5-a4e1a00cfefb",
+   "id": "1fa9db38-0aa0-4e80-8cf3-0f00cd8658de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "housing_data.info()"
+    "housing_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aa93890-789f-44cd-8acd-4a7704c3718f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_data[['area', 'baths', 'beds', 'hdpData/homeInfo/latitude', 'hdpData/homeInfo/longitude']].corrwith(housing_data['unformattedPrice'])"
    ]
   },
   {
@@ -63,32 +73,8 @@
    "outputs": [],
    "source": [
     "# Drop unnecessary columns\n",
-    "housing_df = housing_data.drop(['address', 'addressStreet', 'availabilityDate', 'brokerName', 'hasAdditionalAttributions', \n",
-    "                              'isHomeRec', 'isSaved', 'isUndisclosedAddress', 'isUserClaimingOwner', 'list', 'openHouseDescription',\n",
-    "                             'openHouseStartDate', 'shouldShowZestimateAsPrice', 'variableData/text', 'variableData/type'], axis=1)\n",
+    "housing_df = housing_data[['id', 'area', 'baths', 'beds', 'hdpData/homeInfo/latitude', 'hdpData/homeInfo/longitude', 'unformattedPrice']]\n",
     "housing_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5648b68-a93e-4d44-9392-71eec3f5bbad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "housing_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7267506-17be-4025-af14-432348456f17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create df for predictive modeling\n",
-    "model_df = housing_df[['id', 'beds', 'baths', 'area', 'addressZipcode', 'statusText', 'unformattedPrice']]\n",
-    "model_df.head()"
    ]
   },
   {
@@ -99,9 +85,9 @@
    "outputs": [],
    "source": [
     "# Create df for reference data\n",
-    "ref_df = housing_df[['id', 'price', 'addressCity', 'addressZipcode', 'area', 'baths',\n",
-    "       'beds', 'latLong/latitude', 'latLong/longitude',  'statusText']]\n",
-    "ref_df.head()"
+    "# ref_df = housing_df[['id', 'price', 'addressCity', 'addressZipcode', 'area', 'baths',\n",
+    "#        'beds', 'latLong/latitude', 'latLong/longitude',  'statusText']]\n",
+    "# ref_df.head()"
    ]
   },
   {
@@ -114,9 +100,8 @@
     "# Start model data cleaning\n",
     "\n",
     "#rename columns\n",
-    "model_df = model_df.rename(columns={'addressZipcode': 'zipcode', 'area': 'sqft', 'statusText': 'type', 'unformattedPrice': 'price'})\n",
-    "#cleanup house type\n",
-    "model_df['type'] = model_df.apply(lambda row: row['type'].split(\" \")[0], axis=1)\n",
+    "model_df = housing_df.rename(columns={'area': 'sqft', 'hdpData/homeInfo/latitude': 'latitude', \n",
+    "                                    'hdpData/homeInfo/longitude': 'longitude', 'unformattedPrice': 'sale_price'})\n",
     "\n",
     "#Confirm final data\n",
     "model_df.head()"
@@ -130,13 +115,13 @@
    "outputs": [],
    "source": [
     "#Start reference data cleansing\n",
-    "ref_df = ref_df.rename(columns={'addressCity': 'city', 'addressZipcode': 'zipcode', 'area': 'sqft', \n",
-    "                        'latLong/latitude': 'latitude', 'latLong/longitude': 'longitude',  'statusText': 'type'})\n",
+    "# ref_df = ref_df.rename(columns={'addressCity': 'city', 'addressZipcode': 'zipcode', 'area': 'sqft', \n",
+    "#                         'latLong/latitude': 'latitude', 'latLong/longitude': 'longitude',  'statusText': 'type'})\n",
     "\n",
-    "#cleanup house type\n",
-    "ref_df['type'] = ref_df.apply(lambda row: row['type'].split(\" \")[0], axis=1)\n",
+    "# #cleanup house type\n",
+    "# ref_df['type'] = ref_df.apply(lambda row: row['type'].split(\" \")[0], axis=1)\n",
     "\n",
-    "ref_df.head()"
+    "# ref_df.head()"
    ]
   },
   {
@@ -158,7 +143,7 @@
    "outputs": [],
    "source": [
     "#Get reference columns for database\n",
-    "ref_df.columns"
+    "#ref_df.columns"
    ]
   },
   {
@@ -185,27 +170,27 @@
     "#Define model and reference tables\n",
     "\n",
     "class ModelData(Base):\n",
-    "    __tablename__ = 'model_data'\n",
+    "    __tablename__ = 'train_data'\n",
     "    id = Column(Integer, primary_key=True)\n",
     "    beds = Column(Integer)\n",
     "    baths = Column(Integer)\n",
     "    sqft = Column(Integer)\n",
-    "    zipcode = Column(String)\n",
-    "    type = Column(String)\n",
+    "    latitude = Column(Integer)\n",
+    "    longitude = Column(Integer)\n",
     "    price = Column(Integer)\n",
     "\n",
-    "class RefData(Base):\n",
-    "    __tablename__ = 'reference_data'\n",
-    "    id = Column(Integer, primary_key=True)\n",
-    "    price = Column(String)\n",
-    "    city = Column(String)\n",
-    "    zipcode = Column(String)\n",
-    "    sqft = Column(Integer)\n",
-    "    baths = Column(Integer)\n",
-    "    beds = Column(Integer)\n",
-    "    latitude = Column(Float)\n",
-    "    longitude = Column(Float)\n",
-    "    type = Column(String)"
+    "# class RefData(Base):\n",
+    "#     __tablename__ = 'reference_data'\n",
+    "#     id = Column(Integer, primary_key=True)\n",
+    "#     price = Column(String)\n",
+    "#     city = Column(String)\n",
+    "#     zipcode = Column(String)\n",
+    "#     sqft = Column(Integer)\n",
+    "#     baths = Column(Integer)\n",
+    "#     beds = Column(Integer)\n",
+    "#     latitude = Column(Float)\n",
+    "#     longitude = Column(Float)\n",
+    "#     type = Column(String)"
    ]
   },
   {
@@ -236,9 +221,9 @@
     "        model.beds = row['beds']\n",
     "        model.baths = row['baths']\n",
     "        model.sqft = row['sqft']\n",
-    "        model.zipcode = row['zipcode']\n",
-    "        model.type = row['type']\n",
-    "        model.price = row['price']\n",
+    "        model.latitude = row['latitude']\n",
+    "        model.longitude = row['longitude']\n",
+    "        model.price = row['sale_price']\n",
     "\n",
     "        session.add(model)\n",
     "\n",
@@ -246,23 +231,23 @@
     "    session.commit()\n",
     "\n",
     "    #Loop thru reference data\n",
-    "    for index, row in ref_df.iterrows():\n",
-    "        ref = RefData()\n",
-    "        ref.id = row['id']\n",
-    "        ref.price = row['price']\n",
-    "        ref.city = row['city']\n",
-    "        ref.zipcode = row['zipcode']\n",
-    "        ref.sqft = row['sqft']\n",
-    "        ref.baths = row['baths']\n",
-    "        ref.beds = row['beds']\n",
-    "        ref.latitude = row['latitude']\n",
-    "        ref.longitude = row['longitude']\n",
-    "        ref.type = row['type']\n",
+    "    # for index, row in ref_df.iterrows():\n",
+    "    #     ref = RefData()\n",
+    "    #     ref.id = row['id']\n",
+    "    #     ref.price = row['price']\n",
+    "    #     ref.city = row['city']\n",
+    "    #     ref.zipcode = row['zipcode']\n",
+    "    #     ref.sqft = row['sqft']\n",
+    "    #     ref.baths = row['baths']\n",
+    "    #     ref.beds = row['beds']\n",
+    "    #     ref.latitude = row['latitude']\n",
+    "    #     ref.longitude = row['longitude']\n",
+    "    #     ref.type = row['type']\n",
     "\n",
-    "        session.add(ref)\n",
+    "    #     session.add(ref)\n",
     "\n",
     "    #commit after adding all rows for each model\n",
-    "    session.commit()\n",
+    "    #session.commit()\n",
     "    "
    ]
   },
@@ -289,10 +274,10 @@
    "outputs": [],
    "source": [
     "#Reference data\n",
-    "stmt = select(RefData)\n",
-    "results = session.execute(stmt).mappings().all()\n",
-    "for row in results:\n",
-    "    print(f'ID: {row.RefData.id} - Price: {row.RefData.price}')"
+    "# stmt = select(RefData)\n",
+    "# results = session.execute(stmt).mappings().all()\n",
+    "# for row in results:\n",
+    "#     print(f'ID: {row.RefData.id} - Price: {row.RefData.price}')"
    ]
   },
   {
